--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+$primary: #e50914;
+$secondary: #333333;
+$gray: #827d81;
+$gray-secondary: #8c8c8c;
+$black-bg: #141414;
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background: $black-bg; }
+
+.text-white {
+  color: white;
+}
+
+.text-secondary {
+  color: $gray-secondary;
+}
+
+.primary-bg {
+  height: 100vh;
+  background-color: #bb0710;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 100 60'%3E%3Cg %3E%3Crect fill='%23bb0710' width='11' height='11'/%3E%3Crect fill='%23b90c11' x='10' width='11' height='11'/%3E%3Crect fill='%23b70f12' y='10' width='11' height='11'/%3E%3Crect fill='%23b41213' x='20' width='11' height='11'/%3E%3Crect fill='%23b21513' x='10' y='10' width='11' height='11'/%3E%3Crect fill='%23b01714' y='20' width='11' height='11'/%3E%3Crect fill='%23ae1915' x='30' width='11' height='11'/%3E%3Crect fill='%23ab1b16' x='20' y='10' width='11' height='11'/%3E%3Crect fill='%23a91d16' x='10' y='20' width='11' height='11'/%3E%3Crect fill='%23a71f17' y='30' width='11' height='11'/%3E%3Crect fill='%23a52018' x='40' width='11' height='11'/%3E%3Crect fill='%23a32118' x='30' y='10' width='11' height='11'/%3E%3Crect fill='%23a02319' x='20' y='20' width='11' height='11'/%3E%3Crect fill='%239e241a' x='10' y='30' width='11' height='11'/%3E%3Crect fill='%239c251a' y='40' width='11' height='11'/%3E%3Crect fill='%239a261b' x='50' width='11' height='11'/%3E%3Crect fill='%2397271c' x='40' y='10' width='11' height='11'/%3E%3Crect fill='%2395281c' x='30' y='20' width='11' height='11'/%3E%3Crect fill='%2393291d' x='20' y='30' width='11' height='11'/%3E%3Crect fill='%23912a1e' x='10' y='40' width='11' height='11'/%3E%3Crect fill='%238f2a1e' y='50' width='11' height='11'/%3E%3Crect fill='%238c2b1f' x='60' width='11' height='11'/%3E%3Crect fill='%238a2c20' x='50' y='10' width='11' height='11'/%3E%3Crect fill='%23882c20' x='40' y='20' width='11' height='11'/%3E%3Crect fill='%23862d21' x='30' y='30' width='11' height='11'/%3E%3Crect fill='%23842e21' x='20' y='40' width='11' height='11'/%3E%3Crect fill='%23812e22' x='10' y='50' width='11' height='11'/%3E%3Crect fill='%237f2f22' x='70' width='11' height='11'/%3E%3Crect fill='%237d2f23' x='60' y='10' width='11' height='11'/%3E%3Crect fill='%237b2f24' x='50' y='20' width='11' height='11'/%3E%3Crect fill='%23783024' x='40' y='30' width='11' height='11'/%3E%3Crect fill='%23763025' x='30' y='40' width='11' height='11'/%3E%3Crect fill='%23743125' x='20' y='50' width='11' height='11'/%3E%3Crect fill='%23723126' x='80' width='11' height='11'/%3E%3Crect fill='%23703126' x='70' y='10' width='11' height='11'/%3E%3Crect fill='%236d3227' x='60' y='20' width='11' height='11'/%3E%3Crect fill='%236b3227' x='50' y='30' width='11' height='11'/%3E%3Crect fill='%23693228' x='40' y='40' width='11' height='11'/%3E%3Crect fill='%23673228' x='30' y='50' width='11' height='11'/%3E%3Crect fill='%23643329' x='90' width='11' height='11'/%3E%3Crect fill='%2362332a' x='80' y='10' width='11' height='11'/%3E%3Crect fill='%2360332a' x='70' y='20' width='11' height='11'/%3E%3Crect fill='%235d332b' x='60' y='30' width='11' height='11'/%3E%3Crect fill='%235b332b' x='50' y='40' width='11' height='11'/%3E%3Crect fill='%2359332c' x='40' y='50' width='11' height='11'/%3E%3Crect fill='%2356332c' x='90' y='10' width='11' height='11'/%3E%3Crect fill='%2354332d' x='80' y='20' width='11' height='11'/%3E%3Crect fill='%2352332d' x='70' y='30' width='11' height='11'/%3E%3Crect fill='%234f332e' x='60' y='40' width='11' height='11'/%3E%3Crect fill='%234d342e' x='50' y='50' width='11' height='11'/%3E%3Crect fill='%234b342f' x='90' y='20' width='11' height='11'/%3E%3Crect fill='%2348342f' x='80' y='30' width='11' height='11'/%3E%3Crect fill='%23463430' x='70' y='40' width='11' height='11'/%3E%3Crect fill='%23433330' x='60' y='50' width='11' height='11'/%3E%3Crect fill='%23413331' x='90' y='30' width='11' height='11'/%3E%3Crect fill='%233e3331' x='80' y='40' width='11' height='11'/%3E%3Crect fill='%233b3332' x='70' y='50' width='11' height='11'/%3E%3Crect fill='%23393332' x='90' y='40' width='11' height='11'/%3E%3Crect fill='%23363333' x='80' y='50' width='11' height='11'/%3E%3Crect fill='%23333333' x='90' y='50' width='11' height='11'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
+.w-full {
+  width: 100%;
+}
